--- a/crm/templates/crm/index.html
+++ b/crm/templates/crm/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Главная страница</title>
-</head>
-<body>
-<h1>Главная страница приложения CRM</h1>
-</body>
-</html>
+{% extends 'crm/base.html' %}
+
+{% block content %}
+
+<h1>Данные из индекса</h1>
+{% endblock %}
