--- a/contacts/templates/contacts/contacts.html
+++ b/contacts/templates/contacts/contacts.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Шаблон контактов</title>
-</head>
-<body>
-HTML Шаблон страницы приложения "Контакты"
-</body>
-</html>
+{% extends './crm/templates/crm/base.html' %}
+
+{% block content %}
+
+
+
+<p> Внутренние телефоны по отделам</p>
+{% endblock %}
