--- a/crm/templates/crm/index.html
+++ b/crm/templates/crm/index.html
@@ -2,5 +2,10 @@
 
 {% block content %}
 
-<h1>Данные из индекса</h1>
+<p>Корпоративный портал компании</p>
+<br>
+<h3>«Евролюкс групп»</h3>
+<br><br><br><br>
+
+<p> Новости компании</p>
 {% endblock %}
